--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "584a00ae",
+   "metadata": {},
+   "source": [
+    "# Agenda: Week 3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfa25294",
+   "id": "2aaf580d",
    "metadata": {},
    "outputs": [],
    "source": []
