--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,16 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "584a00ae",
+   "id": "938a12af",
    "metadata": {},
    "source": [
-    "# Agenda: Week 3"
+    "# Agenda: Week 3 (Dictionaries and files)\n",
+    "\n",
+    "1. Recap data structures so far\n",
+    "2. Dictionaries (\"dicts\")\n",
+    "    - Storing\n",
+    "    - Retrieving\n",
+    "    - Keys and values\n",
+    "    - Modifying dictionaries\n",
+    "3. Accumulating in dicts\n",
+    "4. Acuumulating the unknown\n",
+    "5. Looping over dicts\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2aaf580d",
+   "id": "cdc1005c",
    "metadata": {},
    "outputs": [],
    "source": []
