--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "938a12af",
+   "id": "0754097c",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -16,13 +16,19 @@
     "3. Accumulating in dicts\n",
     "4. Acuumulating the unknown\n",
     "5. Looping over dicts\n",
-    "\n"
+    "6. Files\n",
+    "    - File objects\n",
+    "    - Reading from files\n",
+    "    - Writing to files\n",
+    "    - Using with `with` statement when working with files\n",
+    "    \n",
+    "We'll use files from this zipfile: https://files.lerner.co.il/exercise-files.zip    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdc1005c",
+   "id": "499cc7a3",
    "metadata": {},
    "outputs": [],
    "source": []
