--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0754097c",
+   "id": "be4afd63",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -26,12 +26,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "499cc7a3",
+   "cell_type": "markdown",
+   "id": "b8cf4adb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Data structures so far\n",
+    "\n",
+    "We've seen that different types of data can be stored in different types of structures. Each structure provides us with different functionality and speed trade-offs.\n",
+    "\n",
+    "Integers are really small and very fast -- but very annoying if we're going to use them for text.\n",
+    "\n",
+    "Strings are great for text - but very annoying if we want to store multiple things (that aren't characters).\n",
+    "\n",
+    "Lists are great for collections -- but very annoying if I just want to hold onto the text of a book or article.\n",
+    "\n",
+    "Generally speaking:\n",
+    "- Integers are for whole numbers, and floats are for numbers with a fractional part"
+   ]
   }
  ],
  "metadata": {
