--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "be4afd63",
+   "id": "8e6958ff",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8cf4adb",
+   "id": "94c6526d",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -41,7 +41,14 @@
     "Lists are great for collections -- but very annoying if I just want to hold onto the text of a book or article.\n",
     "\n",
     "Generally speaking:\n",
-    "- Integers are for whole numbers, and floats are for numbers with a fractional part"
+    "- Integers are for whole numbers, and floats are for numbers with a fractional part\n",
+    "- Strings are for text (of any length), or collections of characters\n",
+    "- Lists are the go-to ordered collection in Python.  Lists can contain anything at all, and can be any size we want. We can append to the end, and we can remove from anywhere.\n",
+    "- Tuples are Python's version of structs or records. They are immutable, but more importantly, we typically use tuples when we have a collection of different types.\n",
+    "\n",
+    "Some examples:\n",
+    "- If I have a text document, I'll store that in a string.\n",
+    "- If I have a few words that our company wants to be sure are never used in a press release, then we could put those in a list, and "
    ]
   }
  ],
