--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8e6958ff",
+   "id": "d59aa0b2",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94c6526d",
+   "id": "e777cb30",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -48,8 +48,15 @@
     "\n",
     "Some examples:\n",
     "- If I have a text document, I'll store that in a string.\n",
-    "- If I have a few words that our company wants to be sure are never used in a press release, then we could put those in a list, and "
+    "- If I have a few words that our company wants to be sure are never used in a press release, then we could put those in a list, and search for each of them in outgoing correspondence.\n",
+    "- If I have information about an employee -- their name, age, address, and salary -- then I'll put those in a tuple, because it's a collection of information of different types."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "feaa410f",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
