--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d59aa0b2",
+   "id": "dd81352b",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e777cb30",
+   "id": "7a78429b",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,9 +54,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feaa410f",
+   "id": "646f1fa0",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Getting help in Jupyter\n",
+    "\n",
+    "Every Python environment is a bit different, but in Jupyter, you have a few ways to get help, and to find out what your options are.\n",
+    "\n",
+    "1. At any point, you can press `TAB` to complete your options. If you press `TAB` halfway through a variable name, then Python will try to complete it. If the completion is ambiguous, then it'll show you a menu of possibilities. If you're after a `.`, then it'll show you all of the methods that you can invoke on that type of object.\n",
+    "2. You can use the `help` function to find out more about something, as in `help(len)` or `help(str.upper)`. Notice that if I'm getting help on a function, I don't invoke it with `()`, but just pass its name as an argument to `help`.\n",
+    "3. You can put any variable, function, or other name in Jupyter, and put a `?` after it, to get information about it. If you use `??`, you'll sometimes get more information, such as the definition of a function"
+   ]
   }
  ],
  "metadata": {
