--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dd81352b",
+   "id": "d5fc7028",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a78429b",
+   "id": "972123db",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "646f1fa0",
+   "id": "e62d7095",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -63,7 +63,201 @@
     "\n",
     "1. At any point, you can press `TAB` to complete your options. If you press `TAB` halfway through a variable name, then Python will try to complete it. If the completion is ambiguous, then it'll show you a menu of possibilities. If you're after a `.`, then it'll show you all of the methods that you can invoke on that type of object.\n",
     "2. You can use the `help` function to find out more about something, as in `help(len)` or `help(str.upper)`. Notice that if I'm getting help on a function, I don't invoke it with `()`, but just pass its name as an argument to `help`.\n",
-    "3. You can put any variable, function, or other name in Jupyter, and put a `?` after it, to get information about it. If you use `??`, you'll sometimes get more information, such as the definition of a function"
+    "3. You can put any variable, function, or other name in Jupyter, and put a `?` after it, to get information about it. If you use `??`, you'll sometimes get more information, such as the definition of a function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "aef18cef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variable_x = 100\n",
+    "variable_y = [10, 20, 30]\n",
+    "variable_z = 'Hello, out there!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a503b8b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on list object:\n",
+      "\n",
+      "class list(object)\n",
+      " |  list(iterable=(), /)\n",
+      " |  \n",
+      " |  Built-in mutable sequence.\n",
+      " |  \n",
+      " |  If no argument is given, the constructor creates a new empty list.\n",
+      " |  The argument must be an iterable if specified.\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __add__(self, value, /)\n",
+      " |      Return self+value.\n",
+      " |  \n",
+      " |  __contains__(self, key, /)\n",
+      " |      Return key in self.\n",
+      " |  \n",
+      " |  __delitem__(self, key, /)\n",
+      " |      Delete self[key].\n",
+      " |  \n",
+      " |  __eq__(self, value, /)\n",
+      " |      Return self==value.\n",
+      " |  \n",
+      " |  __ge__(self, value, /)\n",
+      " |      Return self>=value.\n",
+      " |  \n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |  \n",
+      " |  __getitem__(...)\n",
+      " |      x.__getitem__(y) <==> x[y]\n",
+      " |  \n",
+      " |  __gt__(self, value, /)\n",
+      " |      Return self>value.\n",
+      " |  \n",
+      " |  __iadd__(self, value, /)\n",
+      " |      Implement self+=value.\n",
+      " |  \n",
+      " |  __imul__(self, value, /)\n",
+      " |      Implement self*=value.\n",
+      " |  \n",
+      " |  __init__(self, /, *args, **kwargs)\n",
+      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      " |  \n",
+      " |  __iter__(self, /)\n",
+      " |      Implement iter(self).\n",
+      " |  \n",
+      " |  __le__(self, value, /)\n",
+      " |      Return self<=value.\n",
+      " |  \n",
+      " |  __len__(self, /)\n",
+      " |      Return len(self).\n",
+      " |  \n",
+      " |  __lt__(self, value, /)\n",
+      " |      Return self<value.\n",
+      " |  \n",
+      " |  __mul__(self, value, /)\n",
+      " |      Return self*value.\n",
+      " |  \n",
+      " |  __ne__(self, value, /)\n",
+      " |      Return self!=value.\n",
+      " |  \n",
+      " |  __repr__(self, /)\n",
+      " |      Return repr(self).\n",
+      " |  \n",
+      " |  __reversed__(self, /)\n",
+      " |      Return a reverse iterator over the list.\n",
+      " |  \n",
+      " |  __rmul__(self, value, /)\n",
+      " |      Return value*self.\n",
+      " |  \n",
+      " |  __setitem__(self, key, value, /)\n",
+      " |      Set self[key] to value.\n",
+      " |  \n",
+      " |  __sizeof__(self, /)\n",
+      " |      Return the size of the list in memory, in bytes.\n",
+      " |  \n",
+      " |  append(self, object, /)\n",
+      " |      Append object to the end of the list.\n",
+      " |  \n",
+      " |  clear(self, /)\n",
+      " |      Remove all items from list.\n",
+      " |  \n",
+      " |  copy(self, /)\n",
+      " |      Return a shallow copy of the list.\n",
+      " |  \n",
+      " |  count(self, value, /)\n",
+      " |      Return number of occurrences of value.\n",
+      " |  \n",
+      " |  extend(self, iterable, /)\n",
+      " |      Extend list by appending elements from the iterable.\n",
+      " |  \n",
+      " |  index(self, value, start=0, stop=9223372036854775807, /)\n",
+      " |      Return first index of value.\n",
+      " |      \n",
+      " |      Raises ValueError if the value is not present.\n",
+      " |  \n",
+      " |  insert(self, index, object, /)\n",
+      " |      Insert object before index.\n",
+      " |  \n",
+      " |  pop(self, index=-1, /)\n",
+      " |      Remove and return item at index (default last).\n",
+      " |      \n",
+      " |      Raises IndexError if list is empty or index is out of range.\n",
+      " |  \n",
+      " |  remove(self, value, /)\n",
+      " |      Remove first occurrence of value.\n",
+      " |      \n",
+      " |      Raises ValueError if the value is not present.\n",
+      " |  \n",
+      " |  reverse(self, /)\n",
+      " |      Reverse *IN PLACE*.\n",
+      " |  \n",
+      " |  sort(self, /, *, key=None, reverse=False)\n",
+      " |      Sort the list in ascending order and return None.\n",
+      " |      \n",
+      " |      The sort is in-place (i.e. the list itself is modified) and stable (i.e. the\n",
+      " |      order of two equal elements is maintained).\n",
+      " |      \n",
+      " |      If a key function is given, apply it once to each list item and sort them,\n",
+      " |      ascending or descending, according to their function values.\n",
+      " |      \n",
+      " |      The reverse flag can be set to sort in descending order.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Class methods defined here:\n",
+      " |  \n",
+      " |  __class_getitem__(...) from builtins.type\n",
+      " |      See PEP 585\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods defined here:\n",
+      " |  \n",
+      " |  __new__(*args, **kwargs) from builtins.type\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |  \n",
+      " |  __hash__ = None\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(variable_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "44685544",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variable_y??"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d961e7e",
+   "metadata": {},
+   "source": [
+    "# Dictionaries (aka \"dicts\")\n",
+    "\n",
+    "When we store data in a list, we know several things:\n",
+    "\n",
+    "1. We can store any type of data that we want.\n",
+    "2. Each additional eleme"
    ]
   }
  ],
