--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d5fc7028",
+   "id": "f34e7898",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "972123db",
+   "id": "eedacb43",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e62d7095",
+   "id": "e438ffa3",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "aef18cef",
+   "id": "3d56e0e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a503b8b1",
+   "id": "e3cbe168",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "44685544",
+   "id": "1b0bbdfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d961e7e",
+   "id": "bcc33c74",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -257,7 +257,16 @@
     "When we store data in a list, we know several things:\n",
     "\n",
     "1. We can store any type of data that we want.\n",
-    "2. Each additional eleme"
+    "2. Each new element in the list is put at a new index, 1 higher than the previous final element's index. Indexes start at 0.\n",
+    "3. We can update the values in a list by assigning to the list at a particular index.\n",
+    "\n",
+    "There are some problems with this, though:\n",
+    "\n",
+    "1. We have to use integers to retrieve our values.\n",
+    "2. Those integers start at 0, and are rather inflexible.\n",
+    "3. If we want to search for a value in our list, we need to (potentially) go through all of the values until we'll either find it or see that it's not there.\n",
+    "\n",
+    "Imagine we're running a new streaming service. Someone wants to know whether we have a particular movie in stock. Can you imagine looking through 1m films in a list, one at a time, to fi"
    ]
   }
  ],
