--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f34e7898",
+   "id": "56928d12",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eedacb43",
+   "id": "fb30f917",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e438ffa3",
+   "id": "176d5eae",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3d56e0e9",
+   "id": "2e228951",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e3cbe168",
+   "id": "36ee7cd7",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1b0bbdfa",
+   "id": "81f770b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcc33c74",
+   "id": "e0218748",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -266,7 +266,31 @@
     "2. Those integers start at 0, and are rather inflexible.\n",
     "3. If we want to search for a value in our list, we need to (potentially) go through all of the values until we'll either find it or see that it's not there.\n",
     "\n",
-    "Imagine we're running a new streaming service. Someone wants to know whether we have a particular movie in stock. Can you imagine looking through 1m films in a list, one at a time, to fi"
+    "Imagine we're running a new streaming service. Someone wants to know whether we have a particular movie in stock. Can you imagine looking through 1m films in a list, one at a time, to see if we have it in stock? That would take forever!\n",
+    "\n",
+    "Dictionaries provide a wonderful alternative:\n",
+    "- They are more flexible with their indexes (known as \"keys\")\n",
+    "- They are far faster to search through than lists\n",
+    "- They also provide us with more semantic power than lists do"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "374e772e",
+   "metadata": {},
+   "source": [
+    "A dict is also known by many other names in other languages:\n",
+    "- key-value store\n",
+    "- name-value store\n",
+    "- hash table\n",
+    "- hash map\n",
+    "- hash\n",
+    "- map\n",
+    "- associative array\n",
+    "\n",
+    "You can think of a dict as a two-column table, in which the left column contains keys and the right column contains values.\n",
+    "\n",
+    "A list can only have integer k"
    ]
   }
  ],
