--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "56928d12",
+   "id": "85caf4b5",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb30f917",
+   "id": "188b2e05",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "176d5eae",
+   "id": "a4af5bf1",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2e228951",
+   "id": "d10da51d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "36ee7cd7",
+   "id": "22fa14f8",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "81f770b4",
+   "id": "9dfd581b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0218748",
+   "id": "451ddea5",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "374e772e",
+   "id": "75ebe38c",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -290,8 +290,61 @@
     "\n",
     "You can think of a dict as a two-column table, in which the left column contains keys and the right column contains values.\n",
     "\n",
-    "A list can only have integer k"
+    "A list can only have integer keys, and they start with 0, and go up by 1.\n",
+    "\n",
+    "A dict, by contrast, can have keys of *any immutable type* (which basically means integers and strings), and values of any type at all. We, the users, can say what the dict keys are. We aren't restricted to 0, 1, 2, etc. We can use:\n",
+    "\n",
+    "- ID numbers\n",
+    "- names\n",
+    "- usernames\n",
+    "- IP addresses"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "99a589c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to define a dict, we use {}\n",
+    "# each key-value pair is defined with the key, then :, then the value\n",
+    "# pairs are separated by ,\n",
+    "\n",
+    "# in a dict, every key must have a value, and every value must have a key\n",
+    "# also: keys are unique! It's impossible for a dict to have the same key twice\n",
+    "\n",
+    "d = {'a':10, 'b':20, 'c':30}   # here, I define a dict and assign it to d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "916b2779",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03129654",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
